--- a/css/estilo.css
+++ b/css/estilo.css
@@ -100,7 +100,7 @@ p{
     font-family:'RobotoRegular';  
     color: #253150;  
 }
-p strong,p b{
+p strong,p b,strong,b{
     font-family: 'RobotoBold';
 }
 /*Header*/
@@ -111,6 +111,7 @@ header{
     position: fixed;
     z-index: 16;  
     width: 100%;
+    top: 0;
 }
 .red-band{
     height: 40px;
@@ -211,21 +212,27 @@ header .button:focus {
 	color: #ffffff;
     text-decoration: none;
 }
-.miga{
-    border-top: 1px solid #BD0F14; 
-    height: 45px;     
+.miga{    
+    max-height: 45px;     
     background: #F8F8F8;
+    margin-top: 105px;
+    height: 100%;
 }
-.miga .container{
-    color: #253150;  
-    font-size: 0.9em;    
-    margin-top: 10px;
-    margin-bottom: 10px;
+.miga .container {
+    color: #253150;
+    font-size: 	0.75rem;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    height: 45px;
 }
 .miga a{
     font-family:'RobotoRegular';        
     font-size: 0.9em;  
     text-decoration: none;  
+}
+.miga span{
+    margin: 0 2px;
 }
 .miga a:first-of-type{
     margin-left: 4em;
@@ -306,7 +313,7 @@ section.npage{
 }
 /* Banner Principales*/
 section.brn{
-    padding-top: 149px;
+    padding-top: 0;
 }
 .banner{    
     background-repeat: no-repeat;
@@ -329,7 +336,7 @@ section.brn{
 }
 .banner-slide {
     height: 630px;
-    margin-top: -44px;
+    margin-top: 105px;
 }
 .bluebox {
     font-family: 'GothamBold';
@@ -445,12 +452,10 @@ section.brn{
     position: relative;
     z-index: 1;
     height: 245px;
-    transition: transform 1 s;
+    transition: transform 500ms ease-in-out 25ms; 
 }
-.home-minibox .gray-box:hover{ 
-    transition-timing-function: ease;   
-    transform: translateY(-20px);
-    height: 265px;
+.home-minibox .gray-box:hover{     
+    transform: translateY(-10px);    
 }
 .home-minibox h3{
     position: relative;
@@ -1051,6 +1056,10 @@ h2.beneficios::after{
     height: 100%;
     padding: 2rem 0 0;
 }
+.nuestra-l .colum-sec-full .fiscal{
+    margin: 0 auto 0 0;
+    max-width: 455px;
+}
 .nuestra-l h2{
     font-size: 1.5625rem;  
     position: relative;  
@@ -1104,6 +1113,15 @@ h2.beneficios::after{
 }
 .nuestra-l .full img{
     width: 100%;
+}
+.nuestra-l p.ex-p{
+    max-width: 375px;
+    margin: 0 auto;
+}
+.fiscal{
+    font-size: 1.5625rem;
+    margin: 1.5em auto 1em;
+    max-width: 574px;
 }
 .column-icon .rect{
     background-color: #ffffff;
@@ -1208,7 +1226,7 @@ h2.beneficios::after{
 }
 .colum-medidas-p{
     width: 100%;
-    max-width: 90%;
+    max-width: 574px;
     margin: 1em auto 1.5em;
     background-color: #F8F8F8;
     border-radius: 13px;
@@ -1541,7 +1559,16 @@ h2.beneficios::after{
 }
 /*Intermediarios*/
 .fondo-servicios{
-    height:430px ;    
+    height:430px ; 
+    position: relative;
+    z-index: 1;   
+}
+.interm_serv{
+    position: relative;
+    z-index: 2;
+}
+.interm_serv .container{
+    z-index: 3;
 }
 a#test{
     font-family: 'GothamBold';
@@ -1605,11 +1632,17 @@ a#test{
 .interm h3{
     max-width: 250px;
 }
+.productos{
+    position: relative;
+    z-index: 0;
+}
 .productos .in-slide{
     background: #ffffff;
     height: auto;
     max-height: 315px;
     min-height: 315px;
+    position: relative;
+    z-index: 0;
 }
 .productos .in-slide p {
     margin: 1em;
@@ -1643,6 +1676,8 @@ ul.submenu {
     width: 100%;
     box-shadow: 2px 2px 5px #999;
     background-color: white;
+    max-width: 1070px;
+    margin: 0 auto;
 }
 .backmenu .nav-link {
     color: #B0B6BA;
@@ -1669,7 +1704,7 @@ ul.submenu {
     margin: 1em 0;
 }
 .banner-sec{    
-    padding: 1rem 3rem 0 3rem;
+    padding: 2rem 3rem 0 3rem;
     width: 100%;
 }
 .banner-sec .indicador{
@@ -1686,6 +1721,11 @@ ul.submenu {
     margin: 0 auto;
     padding: 2em 0;
     text-align: center;
+    max-width: 650px;
+}
+.nproductos.intermediarios{
+    width: 100%;
+    max-width: 100%;
 }
 .tab-content{
     padding-top: 2em;
@@ -1729,19 +1769,29 @@ ul.submenu {
 .submenu-dos.intabs .nav-link.active  span{
     width: 100%;
 }
+.upper-tab{
+    max-width: 1170px;
+    margin-left: auto;
+    margin-right: auto;
+}
 .upper-tab img{
     display: block;
     margin-left: auto;
     margin-right: 0;
+    padding-right: 15px;
 }
 .upper-tab p{
-    margin-top: 1rem;
+    margin-top: 2rem;
 }
-.low-tab{
+
+.low-tab {
     margin-top: 120px;
+    max-width: 1170px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .low-tab .lenginm{
-    width: 95%;
+    width: 98%;
     margin: auto;
 }
 .low-tab .lenginm .punto-servicio{
@@ -1753,7 +1803,55 @@ ul.submenu {
     margin: 0 auto;
     color: #333333;
 }
-
+.low-tab .fiscal{
+    margin-left: 1em;
+}
+.low-tab .fiscal h4{
+    font-family: 'GothamBlack';
+    font-size: 1.25rem;
+}
+.low-tab .colum-bluebox h2{
+    position: relative;
+}
+.low-tab .colum-bluebox h2::after{
+    content: '';
+    position: absolute;    
+    width: 35px;
+    height: 3px;
+    background: #BD0F14;
+    border-radius: 2px;
+    left: 0;
+    top: 100%;
+}
+.low-tab .info-seguro-up h2{
+    margin-top: 1em;
+    margin-left: 1em;
+    margin-bottom: 1em;
+}
+.low-tab .info-seguro-l ul{
+    max-width: 368px;
+    margin-left: 2em;
+}
+.low-tab .info-seguro-l ul li {
+    padding-bottom: 0em;
+}
+.low-tab .content-down{
+    width: 100%;
+    padding: 0em 1rem;
+    margin-top: 1rem;
+}
+.low-tab .content-down .colum-dato{
+    max-width: 390px;
+    margin: 0 auto;
+}
+.low-tab .judiciales{
+    max-width: 785px;
+    width: 100%;
+    margin: 0 auto;
+}
+.low-tab .judiciales .mini-slide .block-slide {    
+    height: 400px;
+}
 #v-pills-tab button{
     font-family:'RobotoBold'; 
     text-align: left; 
@@ -2265,6 +2363,12 @@ footer .lineav{
         height: 460px;
     }
 }
+@media (max-width: 1440px){
+    .bluebox.home {
+        top: 23%;
+        left: 6%;
+    }
+}
 @media (max-width: 1399.98px) {
     .navbar-brand img {
         width: 100%;
@@ -2280,6 +2384,10 @@ footer .lineav{
     }
     .interm p {       
         margin-top: 1em;
+    }
+    .bluebox.home {
+        top: 35%;
+        left: 4%;
     }
 }
 @media (max-width: 1199.98px) {
@@ -2347,7 +2455,11 @@ footer .lineav{
     }
 }
 
-
+@media screen and (min-width:992px) and (max-width:1090px) {
+    .miga {
+        margin-top: 130px;        
+    }
+}
 @media screen and (min-width:991.98px) and (max-width:1090px){
     header .button{
         width: 130px;
@@ -2499,8 +2611,7 @@ footer .lineav{
         background: #F8F8F8;
         width: 100%;
         height: 40px;
-        margin-top: 65px;
-        position: fixed;
+        margin-top: 65px;        
         border-top: none;
         z-index: 2;
     }
@@ -2526,8 +2637,7 @@ footer .lineav{
     }
     .banner {
         height: 560px;        
-        width: 100%;
-        padding-top: 100px;         
+        width: 100%;               
     }
     .vcpage{
         height: calc(100vh - 105px);
@@ -2825,6 +2935,28 @@ footer .lineav{
     }
     .vcpage{
         height:100vh;    
+    }
+    .productos .in-slide {
+        width: 100%;
+        max-width: 340px;
+    }
+    .productos .in-slide p{
+        max-width: 350px;
+        margin: 1.5em;
+    }
+    .productos .in-slide h2{
+        margin: 1.5rem 0.625rem;
+    }
+    .intermediarios .container.mt-n200 {
+        margin-top: -335px;
+    }
+    .intermediarios .h-450{
+        height: 270px;
+    }
+
+    .intermediarios .container.mt-n200 h2.white{
+        color: #253150;
+        padding-bottom: 2rem;
     }
 }
 
@@ -3303,8 +3435,16 @@ footer .lineav{
     .especial-img {
         max-width: 375px;        
     }
-    .in-slide {
+    .slider-servicios .in-slide {
         margin: 0 auto;
+    }
+    .in-slide {
+        margin: 0 20px;
+    }
+    .productos .in-slide {
+        width: 100%;
+        max-width: 375px;
+        margin: auto;
     }
 }
 
@@ -3352,13 +3492,16 @@ footer .lineav{
         line-height: 1.2;
     }
     .titulo h1 {
-        max-width: 75%;
+        max-width: 85%;
     }
     .fecha {                
         width: 82%;        
     }
-    .in-slide {
+    .slider-servicios .in-slide {
         margin: 0 auto;
+    }
+    .in-slide {
+        margin: 0 20px;
     }
 }
 @media (max-width: 375px) {
@@ -3411,5 +3554,14 @@ footer .lineav{
     .in-slide {
         margin: 0 auto;
     }
+    
 }
-
+@media (max-width: 330px){
+    .intermediarios .container.mt-n200 {
+        margin-top: -350px;
+    }
+    .intermediarios .container.mt-n200 h2.white {
+        color: #253150;
+        padding-bottom: 1rem;
+    }
+}
